discussion/kv_engine/174861/174861_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52080: Add StoredDocKey mem alloc test, add allocator stats to
existing tests

Extend initial MemoryTrackingTests to cover some Allocator stats.

Add StoredDocKey test using MemoryTrackingAllocator to ensure
memory alloc/dealloc is tracked properly.

Change-Id: If11b8fd7f03d74ff90a11b57d6d74ca79aadf833

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-06-06 10:51:04.000000000
Message: 
Patch Set 12: Published edit on patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-06 11:02:37.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46603/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\storeddockey_test.cc(31): error C3200: "MemoryTrackingAllocator<char,cb::NonNegativeCounter<size_t,cb::DefaultUnderflowPolicy>>": invalid template argument for template parameter "Allocator", expected a class template ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46603/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17919/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:19: error: template argument for template template parameter must be a class template or type alias template [clang-diagnostic-error]
    StoredDocKeyT<MemoryTrackingAllocator<char>> key1(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:36:19: error: template argument for template template parameter must be a class template or type alias template [clang-diagnostic-error]
    StoredDocKeyT<MemoryTrackingAllocator<char>> key2(
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17919/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:19:
error: template argument for template template parameter must be a class template or type alias template [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17919/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7578/ : FAILURE

Compile error at [2022-06-06T10:55:39.739Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:19:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7578/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7682/ : FAILURE

Compile error at [2022-06-06T11:00:00.022Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:47:
error: type/value mismatch at argument 1 in template parameter list for ?template<template<class, class ...> class T> class StoredDocKeyT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7682/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19757/ : FAILURE

Compile error at [2022-06-06T10:54:49.369Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:47:
error: type/value mismatch at argument 1 in template parameter list for ?template<template<class, class ...> class T> class StoredDocKeyT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19757/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20104/ : FAILURE

Compile error at [2022-06-06T10:56:36.745Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:47:
error: type/value mismatch at argument 1 in template parameter list for ?template<template<class, class ...> class T> class StoredDocKeyT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20104/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20759/ : FAILURE

Compile error at [2022-06-06T10:52:59.072Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:19:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20759/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28150/ : FAILURE

Compile error at [2022-06-06T10:54:12.804Z] ../kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:19:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28150/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18949/ : FAILURE

Compile error at [2022-06-06T11:02:16.539Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/storeddockey_test.cc:31:19:
error: template argument for template template parameter must be a class template or type alias template
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18949/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16970/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39166/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
